...
            <rect key="frame" x="0.0" y="0.0" width="479" height="183"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
            <subviews>
                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="why-WX-e0R">
                    <rect key="frame" x="411" y="2" width="64" height="32"/>
                    <animations/>
                    <buttonCell key="cell" type="push" title="Done" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="JSJ-at-7JO">
                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                        <font key="font" metaFont="system"/>
                    </buttonCell>
                    <connections>
                        <action selector="DoneButtonClicked:" target="-2" id="Mtc-eM-qvp"/>
                    </connections>
...
                    <animations/>
                    <popUpButtonCell key="cell" type="push" title="Stone &amp; Pounds (st lbs)" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="RhP-QH-PNO" id="MNq-U6-IrA">
                        <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                        <font key="font" metaFont="menu"/>
                        <menu key="menu" id="ajz-Cc-ena">
                            <items>
                                <menuItem title="Kilograms (kg)" id="G5L-A0-uYD">
                                    <modifierMask key="keyEquivalentModifierMask"/>
                                </menuItem>
                                <menuItem title="Pounds (lbs)" id="iHI-qU-k9Y"/>
                                <menuItem title="Stone &amp; Pounds (st lbs)" state="on" id="RhP-QH-PNO">
                                    <modifierMask key="keyEquivalentModifierMask"/>
                                </menuItem>
...
