...
                        <connections>
                            <action selector="UsersButtonClicked:" target="-2" id="wOw-GY-QOA"/>
                        </connections>
                    </button>
                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ui-ih-Yed">
                        <rect key="frame" x="666" y="532" width="102" height="32"/>
                        <buttonCell key="cell" type="push" title="Settings..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ac2-GW-26V">
                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                            <font key="font" metaFont="system"/>
                        </buttonCell>
                        <connections>
                            <action selector="SettingsButtonClicked:" target="-2" id="U7x-Cs-WZN"/>
                        </connections>
...
